--- a/app/src/main/res/layout/player_single_row_item.xml
+++ b/app/src/main/res/layout/player_single_row_item.xml
@@ -4,22 +4,23 @@
     xmlns:player_card="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    player_card:cardElevation="4dp"
+    player_card:cardElevation="6dp"
     player_card:cardCornerRadius="8dp"
-    android:layout_margin="4dp">
+    android:layout_marginBottom="2dp"
+    player_card:cardBackgroundColor="@color/lightGrey">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginTop="10dp">
+        android:padding="10dp">
 
         <TextView
-        android:id="@+id/player_card_tv_playername"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Player Name"
+            android:id="@+id/player_card_tv_playername"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Player Name"
             android:layout_margin="3dp"/>
 
         <TextView
@@ -28,6 +29,28 @@
             android:layout_height="wrap_content"
             android:text="Company Name"
             android:layout_margin="3dp"/>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="6dp">
+
+            <TextView
+                android:id="@+id/player_single_row_tvWins"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Wins : "
+                android:layout_margin="4dp"/>
+            <TextView
+                android:id="@+id/player_single_row_tvLosses"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Losses :"
+                android:layout_margin="4dp"/>
+
+        </LinearLayout>
     </LinearLayout>
+
 
 </android.support.v7.widget.CardView>
