--- a/app/src/main/res/layout/matchup_single_row_item.xml
+++ b/app/src/main/res/layout/matchup_single_row_item.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="left"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:background="@drawable/gradient_background_lightgrey_darkgrey">
 
         <LinearLayout
             android:id="@+id/single_matchup_awayTeam_container"
