--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="darkGrey">#919191</color>
     <color name="accentYellow">#F0CA4D</color>
     <color name="offWhite">#f2f2f2</color>
+    <color name="lightTan">#fad799</color>
+    <color name="darkTan">#c2a777</color>
 
 
 </resources>
