--- a/app/src/main/res/drawable/signin_background_gradient_top.xml
+++ b/app/src/main/res/drawable/signin_background_gradient_top.xml
@@ -4,8 +4,8 @@
         <shape>
             <gradient
                 android:angle="-90"
-                android:startColor="#345466"
-                android:endColor="#3D6278"
+                android:startColor="#426b81"
+                android:endColor="#355669"
                 android:type="linear" />
         </shape>
     </item>
