--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,7 +62,8 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="10dp"
-            android:gravity="center">
+            android:gravity="center"
+            android:background="@drawable/gradient_background_lighttan_darktan">
 
             <TextView
                 android:layout_width="wrap_content"
