--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.inkedapparelonline.weeklyfootballpicks.activity.MainActivity">
+    tools:context="com.inkedapparelonline.weeklyfootballpicks.activity.MainActivity"
+    android:background="@color/background_darkTan">
 
     <LinearLayout
         android:orientation="vertical"
