--- a/app/src/main/res/layout/activity_matchup.xml
+++ b/app/src/main/res/layout/activity_matchup.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#7a6644"
+    android:background="@color/background_darkTan"
     tools:context="com.inkedapparelonline.weeklyfootballpicks.activity.MatchupActivity">
 
     <LinearLayout
