--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -6,18 +6,21 @@
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_home" />
     <item
+        android:id="@+id/navigation_picks"
+        android:icon="@drawable/ic_player_picks"
+        android:title="@string/menu_title_picks" />
+    <item
+        android:id="@+id/navigation_matchups"
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="@string/title_matchups" />
+    <item
         android:id="@+id/navigation_players"
         android:icon="@drawable/ic_add_player"
         android:title="@string/menu_title_players" />
 
     <item
-        android:id="@+id/navigation_matchups"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_matchups" />
-
-    <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_settings"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="@string/menu_title_settings" />
 
 </menu>
