added bottom navigation view helper class

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:id="@+id/mainActivity_layoutContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/navigation">
+        android:layout_above="@+id/bottomNavView">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/mainActivity_recView"
@@ -30,11 +30,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_above="@+id/navigation"
+        android:layout_alignBottom="@id/mainActivity_layoutContainer"
         android:src="@drawable/ic_add_player"
-        android:layout_margin="16dp" />
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="55dp"/>
 
-    <android.support.design.widget.BottomNavigationView
+    <include layout="@layout/bottom_navigation_view"/>
+   <!-- <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -42,6 +44,6 @@
         android:layout_marginStart="0dp"
         android:background="?android:attr/windowBackground"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/navigation" />
+        app:menu="@menu/navigation" />-->
 
 </RelativeLayout>
