--- a/app/src/main/res/layout/activity_matchup.xml
+++ b/app/src/main/res/layout/activity_matchup.xml
@@ -45,7 +45,8 @@
 
     </LinearLayout>
 
-    <android.support.design.widget.BottomNavigationView
+    <include layout="@layout/bottom_navigation_view"/>
+    <!--<android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -53,6 +54,6 @@
         android:layout_marginStart="0dp"
         android:background="?android:attr/windowBackground"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/navigation" />
+        app:menu="@menu/navigation" />-->
 
 </RelativeLayout>
