--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,7 +11,7 @@
         android:orientation="vertical"
         android:id="@+id/settings_linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="800dp"
+        android:layout_height="500dp"
         android:background="@drawable/signin_background_gradient_top"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -30,12 +30,11 @@
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
-        android:layout_height="800dp"
+        android:layout_height="500dp"
         android:layout_marginBottom="0dp"
         android:background="@drawable/signin_background_gradient_bottom"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/settings_linearLayout">
+        android:layout_below="@id/settings_linearLayout">
 
     </LinearLayout>
 
@@ -46,14 +45,10 @@
         android:layout_height="300dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="250dp"
         card_view:cardElevation="8dp"
-        card_view:cardCornerRadius="12dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/settings_linearLayout">
+        card_view:cardCornerRadius="12dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -87,7 +82,8 @@
 
     </android.support.v7.widget.CardView>
 
-    <android.support.design.widget.BottomNavigationView
+    <include layout="@layout/bottom_navigation_view"/>
+   <!-- <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -95,6 +91,6 @@
         android:layout_marginBottom="0dp"
         android:background="?android:attr/windowBackground"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/navigation" />
+        app:menu="@menu/navigation" />-->
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
