--- a/app/src/main/res/layout/activity_player_picks.xml
+++ b/app/src/main/res/layout/activity_player_picks.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="12dp"
-        android:layout_marginBottom="50dp">
+        android:layout_marginBottom="100dp">
 
 
         <android.support.v7.widget.RecyclerView
@@ -22,6 +22,47 @@
             android:layout_height="wrap_content">
 
         </android.support.v7.widget.RecyclerView>
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="55dp"
+        android:layout_marginStart="100dp"
+        android:gravity="right">
+
+        <Button
+            android:text="Calculate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <Button
+            android:text="Cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"/>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/player_picks_tv_wins"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Wins" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Wins"
+                android:layout_marginTop="6dp"/>
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
